[gd_scene load_steps=6 format=3 uid="uid://bihr8rfaaekcy"]

[ext_resource type="Theme" uid="uid://c3kwn6d20ipja" path="res://GUI/styles/dialogue_gui_theme.tres" id="1_wk4do"]
[ext_resource type="Script" path="res://GUI/level_up/level_up_gui.gd" id="2_ff8jq"]
[ext_resource type="PackedScene" uid="uid://dlboe3rhpm7op" path="res://GUI/level_up/stat_card.tscn" id="3_ftgpa"]
[ext_resource type="Texture2D" uid="uid://bj46kmpl7b6mg" path="res://tactical_mode/unit/GGStandart/GG.png" id="3_xgdr6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crdn2"]
bg_color = Color(0.337255, 0.121569, 0.337255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="LevelUpGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wk4do")
theme_type_variation = &"Dialogue"
script = ExtResource("2_ff8jq")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(320, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_right = 84.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="Panel/VBoxContainer/Title"]
layout_mode = 2
text = "Name"

[node name="leveled_up" type="Label" parent="Panel/VBoxContainer/Title"]
layout_mode = 2
text = "has leveled Up!"
horizontal_alignment = 1

[node name="PtsMsg" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PtsLabel" type="Label" parent="Panel/VBoxContainer/PtsMsg"]
layout_mode = 2
text = "n"

[node name="Label" type="Label" parent="Panel/VBoxContainer/PtsMsg"]
layout_mode = 2
text = "points to allocate"

[node name="CenterContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CharacterDisplay" type="Panel" parent="Panel/VBoxContainer/CenterContainer"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_crdn2")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/CenterContainer/CharacterDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Panel/VBoxContainer/CenterContainer/CharacterDisplay/CenterContainer"]
texture = ExtResource("3_xgdr6")
offset = Vector2(40, 40)

[node name="StatContainer" type="VBoxContainer" parent="Panel/VBoxContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="HP" parent="Panel/VBoxContainer/CenterContainer/StatContainer" instance=ExtResource("3_ftgpa")]
layout_mode = 2

[node name="Speed" parent="Panel/VBoxContainer/CenterContainer/StatContainer" instance=ExtResource("3_ftgpa")]
layout_mode = 2

[node name="Defence" parent="Panel/VBoxContainer/CenterContainer/StatContainer" instance=ExtResource("3_ftgpa")]
layout_mode = 2

[node name="Atack" parent="Panel/VBoxContainer/CenterContainer/StatContainer" instance=ExtResource("3_ftgpa")]
layout_mode = 2

[node name="Done" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Готово"
